# second-game

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  启动游戏.cmd
assets/: event-B0kAzHa-.js  index-1kduZlIn.js  index-CON-SKcN.css
docs/: Architecture.md  AssetPromptLog.md  DemoScript.md  DevelopmentLog.md  InnovationLog.md  InterviewGuide.md  PromptAndAgentDesign.md  RequirementsDoc.md  UIReview.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
