[package]
name = "second-game"
version = "0.6.0"
description = "AI LiveOps Night Market desktop shell"
authors = ["Eyjafjalla"]
license = "MIT"
repository = "https://github.com/Ey1afjalla/second-game"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "second_game_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
